Fix para a leitura de mensagens.